Fix the colour contrast of the nav buttons

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,5 @@
 html {
-  font-family: 'Alata', sans-serif;
-}
-
-body {
-  margin: 0;
-  background-color: #f5f5f5;
+  font-family: Alata, sans-serif;
 }
 
 .nav a {
@@ -33,26 +28,23 @@ li {
 
 li a {
   display: block;
-  color: #f5f5f5;
+  color: #fff;
   text-align: center;
   text-decoration: none;
 }
 
 li a:hover {
-  background-color: #2f4f4f;
+  background-color: #38e07e;
 }
 
 .btn {
-  background-color: #008b8b;
-  border-color: #008b8b;
+  background-color: #38e07e;
+  border-color: #38e07e;
+  color: #000;
 }
 
 .slogan {
-  color: #20b2aa;
-}
-
-.img-flex {
-  width: 100%;
+  color: #000;
 }
 
 .logo {
@@ -65,11 +57,12 @@ li a:hover {
   margin: auto;
 }
 
-.mySlides {
+.myslides {
   display: none;
 }
 
-.prev, .next {
+.prev,
+.next {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -89,7 +82,8 @@ li a:hover {
   border-radius: 3px 0 0 3px;
 }
 
-.prev:hover, .next:hover {
+.prev:hover,
+.next:hover {
   background-color: rgba(0,0,0,0.8);
 }
 
@@ -122,7 +116,8 @@ li a:hover {
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.active,
+.dot:hover {
   background-color: #008b8b;
 }
 
